# anime-recom-flask

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py  service.py  swagger.yaml  vector_db_service.py
notebooks/: df_ver1.ipynb  embbedings_ver1.ipynb  vector_db_ver1.ipynb  vector_db_ver2.ipynb  vector_db_ver3.ipynb  vector_db_ver4.ipynb
